<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.maxters.droid.xpsd.whatsapp.pwd.Main"
    tools:ignore="MergeRootFrame"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/user"
        android:text=""
        tools:text="3432432432432"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        tools:text="asdasdasdhahdasd a sdash"
        android:id="@+id/pass"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:background="@android:color/transparent"
            android:id="@+id/read_pwd"
            android:src="@drawable/ic_refresh"
            android:contentDescription="@string/refresh" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:background="@android:color/transparent"
            android:id="@+id/button"
            android:src="@drawable/ic_share"
            android:contentDescription="@string/share" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        tools:text="eroor msg"
        android:textColor="#f00"
        android:gravity="center_horizontal" />

</LinearLayout>
