<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/user"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pass"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" />

    <ImageButton
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Share"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:id="@+id/button"
        android:src="@android:drawable/ic_menu_share" />

</LinearLayout>
